--- a/.github/workflows/build-docker-tag.yml
+++ b/.github/workflows/build-docker-tag.yml
@@ -8,14 +8,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: env
         env:
           CURRENT_TAG: ${{ steps.version_tag.outputs.VERSION }}
-        run: env && echo $CURRENT_TAG
-      - uses: actions/checkout@v1
+        run: echo "CURRENT_TAG:"$CURRENT_TAG
       - name: Pull code
         run: env && ./prepare.sh    
       - name: Build binary
         run: ./buildBinary.sh
       - name: Build docker
+        env:
+          CURRENT_TAG: ${{ steps.version_tag.outputs.VERSION }}
         run: ./buildHelm.sh tarscloud ${{ secrets.name }} ${{ secrets.pass }} $CURRENT_TAG
