--- a/install/tarsframework/values.yaml
+++ b/install/tarsframework/values.yaml
@@ -4,7 +4,7 @@ helm:
     build:
       id: v1.0.0
     dockerhub:
-      registry: docker.io/tarscloud
+      registry: tarscloud
 
 ## dockerRegistry 指定 默认的业务服务的镜像仓库地址
 dockerRegistry: 
