--- a/doc/tools/helm-lib/values.yaml
+++ b/doc/tools/helm-lib/values.yaml
@@ -10,7 +10,7 @@ reason: ""
 servants:
   - name: Obj
     port: 10000
-    isTaf: false
+    isTars: true
     isTcp: true
     thread: 5
     capacity: 100000
