--- a/.github/workflows/build-compiler-cor.yml
+++ b/.github/workflows/build-compiler-cor.yml
@@ -7,7 +7,7 @@ on:
       - master
     paths:
       - ".github/workflows/build-compiler-cor.yml"
-      - "doc/tools"
+      - "doc/tools/*"
       - "doc/base-compiler.Dockerfile"
   pull_request:
     branches:
