fix TEndpoint.yaml add time

--- a/install/tarscontroller/crds/TEndpoint.yaml
+++ b/install/tarscontroller/crds/TEndpoint.yaml
@@ -314,6 +314,8 @@ spec:
                       type: string
                     source:
                       type: string
+                    time:
+                      type: string
             status:
               properties:
                 pods:
