--- a/install/tarscontroller/crds/TDeploy.yaml
+++ b/install/tarscontroller/crds/TDeploy.yaml
@@ -472,7 +472,6 @@ spec:
               type: object
             deployed:
               type: boolean
-              default: false
           required: [ apply ]
           type: object
     - name: v1beta1
@@ -907,7 +906,19 @@ spec:
                                 required: [ spec ]
                               tLocalVolume:
                                 type: object
-                                property: { }
+                                properties:
+                                  uid:
+                                    type: string
+                                    pattern: ^(0|[1-9][0-9]{0,5})$
+                                    default: "0"
+                                  gid:
+                                    type: string
+                                    pattern: ^(0|[1-9][0-9]{0,5})$
+                                    default: "0"
+                                  mode:
+                                    type: string
+                                    parrern: ^0?[1-7]{3,3}$
+                                    default: "755"
                             oneOf:
                               - required: [ configMap ]
                               - required: [ secret ]
@@ -928,6 +939,7 @@ spec:
                             enum: [ None,HostToContainer,Bidirectional ]
                           subPathExpr:
                             type: string
+                        require: [ name,source,mountPath ]
                     nodeSelector:
                       type: array
                       items:
@@ -1032,6 +1044,5 @@ spec:
               type: object
             deployed:
               type: boolean
-              default: false
           required: [ apply ]
           type: object
