fix tars-log.yaml, add remote log config

--- a/install/tarsframework/templates/tars-tarslog.yaml
+++ b/install/tarsframework/templates/tars-tarslog.yaml
@@ -29,6 +29,17 @@ spec:
   subType: tars
   tars:
     template: tars.cpp
+    profile: |
+      <tars>
+      	<log>
+          logpath=/usr/local/app/tars/remote_app_log
+          logthread=10
+          compressed=true
+          <format>
+            hour=xx
+          </format>
+        </log>
+      </tars>
     servants:
       - name: LogObj
         port: 12111
