--- a/.github/workflows/build-docker-tag.yml
+++ b/.github/workflows/build-docker-tag.yml
@@ -6,7 +6,7 @@ on:
       - v*
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-20.04 
     steps:
       - uses: actions/checkout@v1
       - name: Get version
