--- a/.github/workflows/build-compiler-release-3.0.yml
+++ b/.github/workflows/build-compiler-release-3.0.yml
@@ -29,7 +29,7 @@ jobs:
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
       - name: Build docker
-        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v3.0 --build-arg v3.0
+        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v3.0 --build-arg release/3.0
       - name: push master docker
         run: docker push tarscloud/base-compiler:v3.0
 
