--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -16,6 +16,8 @@ jobs:
     - name: env
       run: env
     - uses: actions/checkout@v1
+    - uses: satackey/action-docker-layer-caching@v0.0.11
+      continue-on-error: true
     - name: Pull code
       run: ./prepare.sh    
     - name: Build binary
