--- a/install/tarscontroller/crds/TConfig.yaml
+++ b/install/tarscontroller/crds/TConfig.yaml
@@ -28,8 +28,9 @@ spec:
               maxLength: 63
             server:
               type: string
-              pattern: ^[a-zA-Z][a-zA-Z0-9]*$
+              pattern: ^([a-zA-Z][a-zA-Z0-9]*){0,1}$
               maxLength: 63
+              default: ""
             configName:
               type: string
               pattern: ^[A-Za-z0-9]([-A-Za-z0-9_.]*[A-Za-z0-9])?$
@@ -57,6 +58,7 @@ spec:
               type: string
               pattern: ^[A-Za-z0-9]([-A-Za-z0-9_.]*[A-Za-z0-9])?$
               maxLength: 63
+          required: [ app, configName,configContent ]
       additionalPrinterColumns:
         - name: App
           type: string
@@ -89,8 +91,9 @@ spec:
               maxLength: 63
             server:
               type: string
-              pattern: ^[a-zA-Z][a-zA-Z0-9]*$
+              pattern: ^([a-zA-Z][a-zA-Z0-9]*){0,1}$
               maxLength: 63
+              default: ""
             configName:
               type: string
               pattern: ^[A-Za-z0-9]([-A-Za-z0-9_.]*[A-Za-z0-9])?$
@@ -118,6 +121,7 @@ spec:
               type: string
               pattern: ^[A-Za-z0-9]([-A-Za-z0-9_.]*[A-Za-z0-9])?$
               maxLength: 63
+          required: [ app, configName,configContent ]
       additionalPrinterColumns:
         - name: App
           type: string
