--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,8 +3,8 @@ entries:
   tarscontroller:
   - apiVersion: v2
     appVersion: v1beta1
-    created: "2021-09-16T14:33:58.914426+08:00"
-    digest: 580fdd2cb47713ce907b32464f897c2174ff01acdab17076e653f07ba343f4be
+    created: "2021-10-24T19:09:27.407758+08:00"
+    digest: 89e05ac60a66ef671292a00eedc2344b2bc2321de861f9be5b64e01df565732d
     keywords:
     - tars
     - tarscontroller
@@ -16,7 +16,18 @@ entries:
   tarsframework:
   - apiVersion: v2
     appVersion: v1beta1
-    created: "2021-09-16T14:33:58.914899+08:00"
+    created: "2021-10-24T19:09:27.40964+08:00"
+    digest: ce6c3ea39b921bd337949855523a4d4fdeb79c673e682ae08e16e32ee7fb5648
+    keywords:
+    - tars
+    name: tarsframework
+    type: application
+    urls:
+    - https://tarscloud.github.io/K8SFramework/charts/tarsframework-1.1.0.tgz
+    version: 1.1.0
+  - apiVersion: v2
+    appVersion: v1beta1
+    created: "2021-10-24T19:09:27.409072+08:00"
     digest: e0169864c07d68c7f0dc529e71c2bc9aac5718dc64b714770d875dbd624e85eb
     keywords:
     - tars
@@ -25,4 +36,4 @@ entries:
     urls:
     - https://tarscloud.github.io/K8SFramework/charts/tarsframework-1.0.0.tgz
     version: 1.0.0
-generated: "2021-09-16T14:33:58.913585+08:00"
+generated: "2021-10-24T19:09:27.406873+08:00"
