fix TServer required secretName, not name

--- a/install/tarscontroller/crds/TServer.yaml
+++ b/install/tarscontroller/crds/TServer.yaml
@@ -340,7 +340,7 @@ spec:
                                   optional:
                                     type: boolean
                                     default: true
-                                required: [ name ]
+                                required: [ secretName ]
                               emptyDir:
                                 type: object
                                 properties:
