--- a/install/tarsframework/templates/tars.php.yaml
+++ b/install/tarsframework/templates/tars.php.yaml
@@ -1,10 +1,10 @@
 {{ $v := lookup  "k8s.tars.io/v1beta1"  "TTemplate" .Release.Namespace "tars.php" -}}
   {{- if not $v -}}
-apiVersion: k8s.tars.io/v1beta1
+apiVersion: k8s.tars.io/{{ .Chart.AppVersion }}
 kind: TTemplate
 metadata:
   name: tars.php
-  {{.Release.Namespace}}
+  namespace: {{.Release.Namespace}}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "-9"
