--- a/doc/tools/helm-lib/values.yaml
+++ b/doc/tools/helm-lib/values.yaml
@@ -25,6 +25,14 @@ replicas: 1
 envVars:
 hostNetwork: false
 hostIPC: false
+nodeSelector: []
+abilityAffinity: "AppOrServerPreferred"
+notStacked: false
+daemonSet: false
+imagePullPolicy: Always
+launcherType: "background"
+updateStrategy: "RollingUpdate"
+podManagementPolicy: "Parallel"
 hostPorts: []
 appConfig:
 config:
