fix tars-tarsweb.yaml format bug

--- a/install/tarsframework/templates/tars-tarsweb.yaml
+++ b/install/tarsframework/templates/tars-tarsweb.yaml
@@ -156,5 +156,5 @@ spec:
               serviceName: tars-tarsweb
               servicePort: 3000
 {{- else}}
-  { $ingress | toYaml } }
+  {{ $ingress | toYaml }}
 {{- end }}
