fix helm templates

--- a/install/tarsframework/templates/tars-tree.yaml
+++ b/install/tarsframework/templates/tars-tree.yaml
@@ -1,4 +1,4 @@
-{{ $tr := lookup (printf "k8s.tars.io/%s" $.Chart.AppVersion) "TTree" .Release.Namespace "tars-tree" -}}
+{{ $tr := lookup (printf "k8s.tars.io/%s" .Chart.AppVersion) "TTree" .Release.Namespace "tars-tree" -}}
 {{- if not $tr -}}
 apiVersion: k8s.tars.io/v1beta2
 kind: TTree
