--- a/install/tarsframework/templates/tars-tarskevent.yaml
+++ b/install/tarsframework/templates/tars-tarskevent.yaml
@@ -8,7 +8,7 @@ metadata:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: tars-system:tars-tarskevent
+  name: "{{.Release.Namespace}}:tars-tarskevent"
 rules:
   - apiGroups: [ "" ]
     resources: [ events ]
@@ -18,11 +18,11 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: tars-system:tars-tarskevent
+  name: "{{.Release.Namespace}}:tars-tarskevent"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: tars-system:tars-tarskevent
+  name: "{{.Release.Namespace}}:tars-tarskevent"
 subjects:
   - kind: ServiceAccount
     name: tars-tarskevent
