--- a/install/tarsframework/templates/tars.default.yaml
+++ b/install/tarsframework/templates/tars.default.yaml
@@ -1,4 +1,4 @@
-{{ $tt := lookup  (printf "k8s.tars.io/%s" $.Chart.AppVersion) "TTemplate" .Release.Namespace "tars.default" -}}
+{{ $tt := lookup  (printf "k8s.tars.io/%s" .Chart.AppVersion) "TTemplate" .Release.Namespace "tars.default" -}}
 {{- if not $tt -}}
 apiVersion: k8s.tars.io/{{ .Chart.AppVersion }}
 kind: TTemplate
