--- a/.github/workflows/build-compiler-master-tag.yml
+++ b/.github/workflows/build-compiler-master-tag.yml
@@ -11,13 +11,14 @@ jobs:
     steps:
       - name: env
         run: env
+      - name: Get version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - uses: actions/checkout@v1
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
       - name: Build docker
-        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:master --build-arg master
-      - name: push master docker
-        run: docker push tarscloud/base-compiler:master
-      - name: push latest docker
-        run: docker tag tarscloud/base-compiler:master tarscloud/base-compiler:latest && docker push tarscloud/base-compiler:latest
+        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:${{ steps.get_version.outputs.VERSION }} --build-arg ${{ steps.get_version.outputs.VERSION }}
+      - name: push ${{ steps.get_version.outputs.VERSION }} docker
+        run: docker push tarscloud/base-compiler:${{ steps.get_version.outputs.VERSION }}
 
