--- a/.github/workflows/build-compiler-release-2.4.yml
+++ b/.github/workflows/build-compiler-release-2.4.yml
@@ -36,7 +36,7 @@ jobs:
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
       - name: Build docker
-        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v2.4 --build-arg release/2.4
+        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v2.4 --build-arg BRANCH=release/2.4
       - name: push master docker
         run: docker push tarscloud/base-compiler:v2.4
 
