update helm-lib add resources

--- a/doc/tools/helm-template/Chart.yaml
+++ b/doc/tools/helm-template/Chart.yaml
@@ -15,6 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
+# not change this version, because helm-lib is more importent , you should upgrade version of helm-lib
 version: 1.0.0
 
 # This is the version number of the application being deployed. This version number should be
@@ -25,5 +26,5 @@ appVersion: v1beta2
 
 dependencies:
 - name: tserver
-  version: 1.2.0
+  version: 1.2.1
   repository: file://../helm-lib/tars-server
