--- a/doc/tools/helm-lib/values.yaml
+++ b/doc/tools/helm-lib/values.yaml
@@ -31,6 +31,7 @@ notStacked: false
 daemonSet: false
 imagePullPolicy: Always
 launcherType: "background"
+resources: {}
 updateStrategy: 
   rollingUpdate:
     partition: 0
