--- a/.github/workflows/build-compiler-release-3.0.yml
+++ b/.github/workflows/build-compiler-release-3.0.yml
@@ -37,6 +37,6 @@ jobs:
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
       - name: Build docker
         run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v3.0 --build-arg BRANCH=release/3.0
-      - name: push master docker
+      - name: push release/3.0 docker
         run: docker push tarscloud/base-compiler:v3.0
 
