--- a/install/tarsframework/templates/tars-tarsweb.yaml
+++ b/install/tarsframework/templates/tars-tarsweb.yaml
@@ -136,13 +136,19 @@ spec:
     image: "{{.Values.helm.dockerhub.registry }}/tars.tarsweb:{{.Values.helm.build.id}}"
 
 ---
-{{ $ingress := lookup "networking.k8s.io/v1beta1"  "Ingress" .Release.Namespace "tars-web" -}}
+{{- $apiIsStable := eq (include "tars.ingress.isStable" .) "true" }}
+{{- $ingressSupportsPathType := eq (include "tars.ingress.supportsPathType" .) "true" }}
+{{- $ingressClass := index .Values "ingress-nginx" "controller" "ingressClass" }}
+{{- $ingress := lookup "networking.k8s.io/v1beta1"  "Ingress" .Release.Namespace "tars-web" -}}
 {{- if not $ingress -}}
 kind: Ingress
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: {{ include "tars.ingress.apiVersion" . }}
 metadata:
   name: tars-web
   annotations:
+    {{- if $ingressClass }}
+    kubernetes.io/ingress.class: {{ $ingressClass }}
+    {{- end }}
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
@@ -152,9 +158,20 @@ spec:
     - host: {{.Values.web}}
       http:
         paths:
-          - backend:
+          - path: /
+            {{- if $ingressSupportsPathType }}
+            pathType: Prefix
+            {{- end }}
+            backend:
+              {{- if $apiIsStable }}
+              service:
+                name: tars-tarsweb
+                port:
+                  number: 3000
+              {{- else }}
               serviceName: tars-tarsweb
               servicePort: 3000
+              {{- end }}
 {{- else}}
   {{ $ingress | toYaml }}
 {{- end }}
