--- a/src/NotifyServer/CMakeLists.txt
+++ b/src/NotifyServer/CMakeLists.txt
@@ -1,4 +1,7 @@
 
+include_directories(../ThirdParty/asio/include)
+include_directories(../ThirdParty/rapidjson/include)
+
 gen_server(tars tarsnotify)
 
-target_link_libraries(tarsnotify esclient)
+target_link_libraries(tarsnotify esclient k8sclient ssl)
