Fix: tarsweb add tframeworkkey authorization

--- a/install/tarsframework/templates/tars-tarsweb.yaml
+++ b/install/tarsframework/templates/tars-tarsweb.yaml
@@ -21,10 +21,10 @@ rules:
     resources: [ horizontalpodautoscalers ]
     verbs: [ create,get,list,watch,patch,update,delete ]
   - apiGroups: [ k8s.tars.io ]
-    resources: [ ttrees,tframeworkconfigs ]
+    resources: [ ttrees,tframeworkconfigs,tframeworkkey ]
     verbs: [ get ,list,watch,patch,update ]
   - apiGroups: [ k8s.tars.io ]
-    resources: [ tdeploys, tservers, ttemplates, treleases,tconfigs,taccounts, tgateways, timages ]
+    resources: [ tdeploys, tservers, ttemplates, treleases,tconfigs,taccounts, tgateways, timages,tframeworkkey ]
     verbs: [ create, get ,list,delete,watch ,patch, update ]
   - apiGroups: [ k8s.tars.io ]
     resources: [ tendpoints,tendpoints/status,texitedrecords ]
