Add: base-compiler add ssl support

--- a/.github/workflows/build-compiler-master-tag.yml
+++ b/.github/workflows/build-compiler-master-tag.yml
@@ -21,4 +21,9 @@ jobs:
         run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:${{ steps.get_version.outputs.VERSION }} --build-arg BRANCH=master
       - name: push master docker
         run: docker push tarscloud/base-compiler:${{ steps.get_version.outputs.VERSION }}
+      - name: Build ssl docker
+        run: cd doc && docker build . -f base-compiler-ssl.Dockerfile -t tarscloud/base-compiler-ssl:${{ steps.get_version.outputs.VERSION }} --build-arg BRANCH=master
+      - name: push master ssl docker
+        run: docker push tarscloud/base-compiler-ssl:${{ steps.get_version.outputs.VERSION }}
+
 
